# kl-run-preflight

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: main.yml
docs/: architecture.md  format-coverage-plan.md  tickets.md
scripts/: generate_schema_diagram.py  run_bulk_roundtrips.py
src/run_preflight/: __init__.py  constants.py  db.py  file_io.py  migrate.py  updates.py
src/run_preflight/legacy/: api.py  formatting.py  parser.py  reconstruct.py  roundtrip.py  validate.py
src/sequencing_brief/: __init__.py  cli.py  constants.py  db.py  formatting.py  migrate.py  parser.py  reconstruct.py  updates.py  validate.py
tests/: _helpers.py  test_capability.py  test_db.py  test_file_io.py  test_legacy_api.py  test_migrate.py  test_multilane.py  test_roundtrip.py  test_schema_drift.py  test_updates.py
tests/data/: Test1_Skin_replicates_15459_novaseq.csv  bad_multilane_pertube_conflict.csv  good_abs_quant_metagv10.csv  good_multilane_synthetic.csv  good_pacbio_absquantv10.csv  good_pacbio_absquantv11.csv  good_pacbio_absquantv12_synthetic.csv  good_pacbio_metagv10.csv  good_pacbio_metagv11.csv  good_standard_metagv0_really_metat.csv  good_standard_metagv0_w_all_settings.csv  good_standard_metagv100_w_replicates.csv  good_standard_metagv100_wo_replicates.csv  good_standard_metagv101_donotuse_synthetic_not_roundtrippable.csv  good_standard_metagv90_no_reverse_complement.csv  good_standard_metagv90_w_all_settings.csv  good_standard_metatv10.csv  good_tellseq_metagv10.csv  pacbio_v11_absquant_unpooled_sample_sheet.csv
(+18 files in other folders)
